@@ -1,4 +1,5 @@
 Unreleased
+- Added support for NPCs asking for items
 - Added --log-file parameter to set log file path or '-' for stdout
 - Removed background color from shop list entries
 - Fixed keyboard movement not stopping on NPC dialog opening
